change font-size old price & new price and fixe swiper z-index

--- a/src/Components/Promotional/Promotional.module.scss
+++ b/src/Components/Promotional/Promotional.module.scss
@@ -103,6 +103,9 @@
 }
 .priceContainer {
   text-align: center;
+  // @include media-query(tablet) {
+  //   text-align: left;
+  // }
   @media screen and (min-width: $desktop) {
     margin-top: 100px;
   }
@@ -110,31 +113,31 @@
 .oldPrice {
   color: var(--blue, #0b6ea5);
   font-family: Kreon;
-  font-size: 18px;
+  font-size: 22px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-decoration: line-through;
   @media screen and (min-width: $tablet) {
-    font-size: 22px;
+    font-size: 28px;
   }
   @media screen and (min-width: $desktop) {
-    font-size: 32px;
+    font-size: 36px;
   }
 }
 .newPrice {
   color: var(--red, #d71f15);
   font-family: Kreon;
-  font-size: 24px;
+  font-size: 28px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 
   @media screen and (min-width: $tablet) {
-    font-size: 28px;
+    font-size: 32px;
   }
   @media screen and (min-width: $tablet) {
-    font-size: 38px;
+    font-size: 40px;
   }
 }
 .promFigure {
