--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,6 @@ img {
 .active {
   color: #fad308;
 }
-.slide {
-  z-index: -1;
-}
+// .mySwiper {
+//   z-index: -1;
+// }
